--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,8 @@ android {
         applicationId "zhet.youplay"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 2
-        versionName "2.0"
+        versionCode 3
+        versionName "2.1"
         multiDexEnabled true
         buildConfigField "String", "KEY", localProperties["key"]
     }
@@ -57,6 +57,7 @@ dependencies {
     implementation('com.google.apis:google-api-services-youtube:v3-rev198-1.23.0') {
         exclude group: 'org.apache.httpcomponents'
     }
+    implementation 'com.google.android.gms:play-services-ads:15.0.1'
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
