--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,15 +22,15 @@ android {
         applicationId "zhet.youplay"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 21
-        versionName "2.19"
+        versionCode 22
+        versionName "2.20"
         multiDexEnabled true
         buildConfigField "String", "KEY", localProperties["key"]
     }
     buildTypes {
         release {
             minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.zig
             applicationVariants.all { variant ->
                 variant.outputs.all {
