--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,13 +17,14 @@ android {
         }
     }
 
-    compileSdkVersion 27
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
     defaultConfig {
         applicationId "zhet.youplay"
         minSdkVersion 21
-        targetSdkVersion 27
-        versionCode 39
-        versionName "2.37"
+        targetSdkVersion 28
+        versionCode 40
+        versionName "2.38"
         multiDexEnabled true
         buildConfigField "String", "KEY", localProperties["key"]
     }
@@ -47,7 +48,7 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.google.android.gms:play-services-auth:16.0.0'
     implementation 'pub.devrel:easypermissions:0.3.0'
@@ -59,8 +60,8 @@ dependencies {
     }
     implementation 'com.google.android.gms:play-services-ads:15.0.1'
     testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
-    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.android.support:multidex:1.0.3'
     implementation project(path: ':player')
