--- a/player/build.gradle
+++ b/player/build.gradle
@@ -21,13 +21,14 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'com.google.firebase:firebase-appindexing:16.0.1'
-    implementation('com.google.apis:google-api-services-youtube:v3-rev198-1.23.0') {
+    implementation 'com.google.firebase:firebase-appindexing:19.0.0'
+    implementation('com.google.apis:google-api-services-youtube:v3-rev99-1.17.0-rc') {
         exclude group: 'org.apache.httpcomponents'
     }
+    implementation 'com.google.api-client:google-api-client:1.30.3'
 }
