--- a/player/build.gradle
+++ b/player/build.gradle
@@ -30,5 +30,5 @@ dependencies {
     implementation('com.google.apis:google-api-services-youtube:v3-rev99-1.17.0-rc') {
         exclude group: 'org.apache.httpcomponents'
     }
-    implementation 'com.google.api-client:google-api-client:1.30.10'
+//    implementation 'com.google.api-client:google-api-client:1.30.11'
 }
